--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ packages/hardhat/*.txt
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 **/node_modules
 packages/hardhat/artifacts
+packages/hardhat/contracts/artifacts
 packages/hardhat/deployments
 packages/frontend/contracts/*
 !packages/frontend/contracts/contracts.js
