--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,12 +14,29 @@
     "@geist-ui/react": "2.2.0",
     "@geist-ui/react-icons": "1.0.1",
     "@usedapp/core": "0.5.4",
+    "@web3-react/abstract-connector": "latest",
+    "@web3-react/authereum-connector": "latest",
+    "@web3-react/core": "latest",
+    "@web3-react/fortmatic-connector": "latest",
+    "@web3-react/frame-connector": "latest",
+    "@web3-react/injected-connector": "latest",
+    "@web3-react/lattice-connector": "latest",
+    "@web3-react/ledger-connector": "latest",
+    "@web3-react/magic-connector": "latest",
+    "@web3-react/network-connector": "latest",
+    "@web3-react/portis-connector": "latest",
+    "@web3-react/torus-connector": "latest",
+    "@web3-react/trezor-connector": "latest",
+    "@web3-react/walletconnect-connector": "^6.2.6",
+    "@web3-react/walletlink-connector": "latest",
     "ethers": "5.5.1",
     "ipfs-http-client": "53.0.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "5.3.3"
+    "styled-components": "5.3.3",
+    "use-wallet": "^0.12.2",
+    "web3-react": "^5.0.5"
   },
   "devDependencies": {
     "@types/react": "17.0.31",
