--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -30,10 +30,12 @@
     "@web3-react/walletconnect-connector": "^6.2.6",
     "@web3-react/walletlink-connector": "latest",
     "ethers": "5.5.1",
+    "graphql-request": "^3.6.1",
     "ipfs-http-client": "53.0.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-query": "^3.27.0",
     "styled-components": "5.3.3",
     "use-wallet": "^0.12.2",
     "web3-react": "^5.0.5"
