--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -32,6 +32,7 @@
     "ethers": "5.5.1",
     "graphql-request": "^3.6.1",
     "ipfs-http-client": "53.0.1",
+    "mobx-react-lite": "^3.2.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
