--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -31,7 +31,8 @@
     "@web3-react/walletlink-connector": "latest",
     "ethers": "5.5.1",
     "graphql-request": "^3.6.1",
-    "ipfs-http-client": "53.0.1",
+    "ipfs-http-client": "^50.0.1",
+    "mobx": "^6.3.5",
     "mobx-react-lite": "^3.2.1",
     "next": "11.1.2",
     "react": "17.0.2",
