--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -38,7 +38,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.27.0",
-    "styled-components": "5.3.3",
+    "react-trello": "^2.2.11",
+    "styled-components": "^5.3.3",
     "use-wallet": "^0.12.2",
     "web3-react": "^5.0.5"
   },
