--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@openzeppelin/contracts": "^4.3.2",
     "@typechain/ethers-v5": "7.2.0",
     "@types/ramda": "0.27.45",
     "eslint": "7.31.0",
@@ -18,7 +19,6 @@
     "@nomiclabs/hardhat-ethers": "2.0.2",
     "@nomiclabs/hardhat-etherscan": "2.1.7",
     "@nomiclabs/hardhat-waffle": "2.0.1",
-    "@openzeppelin/contracts": "4.3.2",
     "@tenderly/hardhat-tenderly": "1.0.12",
     "@typechain/hardhat": "2.3.1",
     "@types/jest": "^27.0.2",
