--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -29,6 +29,7 @@
     "@web3-react/trezor-connector": "latest",
     "@web3-react/walletconnect-connector": "^6.2.6",
     "@web3-react/walletlink-connector": "latest",
+    "axios": "^0.23.0",
     "ethers": "5.5.1",
     "graphql-request": "^3.6.1",
     "ipfs-http-client": "^50.0.1",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@types/react": "17.0.31",
+    "@types/styled-components": "^5.1.15",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "typescript": "4.4.4"
