--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -20,6 +20,7 @@
     "ethers": "5.5.1",
     "graphql-request": "^3.6.1",
     "ipfs-http-client": "^50.0.1",
+    "markdown-to-jsx": "^7.1.3",
     "mobx": "^6.3.5",
     "mobx-react-lite": "^3.2.1",
     "next": "11.1.2",
