--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -17,7 +17,9 @@
     "@web3-react/authereum-connector": "latest",
     "@web3-react/core": "latest",
     "axios": "^0.23.0",
+    "decimal.js": "^10.3.1",
     "ethers": "5.5.1",
+    "framer-motion": "^4.1.17",
     "graphql-request": "^3.6.1",
     "ipfs-http-client": "^50.0.1",
     "markdown-to-jsx": "^7.1.3",
