--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "frontend:build": "yarn workspace @dat-feel/frontend build",
     "frontend:start": "yarn workspace @dat-feel/frontend start",
     "frontend:test": "yarn workspace @dat-feel/frontend test",
-    "build": "yarn workspace @dat-feel/frontend build",
+    "build": "yarn compile && yarn workspace @dat-feel/frontend build",
     "prettier": "yarn workspace @dat-feel/frontend prettier",
     "chain": "yarn workspace @dat-feel/hardhat chain",
     "fork": "yarn workspace @dat-feel/hardhat fork",
