--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -38,7 +38,7 @@
     "chain": "ts-node scripts/start.ts && hardhat node --network hardhat --show-accounts --export-all ../frontend/src/generated/contracts/hardhat_contracts.json",
     "fork": "hardhat node --fork https://mainnet.infura.io/v3/460f40a260564ac4a4f4b3fffb032dad",
     "test": "hardhat test --network hardhat",
-    "compile": "hardhat compile && yarn postdeploy",
+    "compile": "hardhat compile",
     "deploy": "hardhat deploy --export-all ../frontend/src/generated/contracts/hardhat_contracts.json",
     "postdeploy": "hardhat run scripts/publish.ts",
     "watch": "ts-node scripts/watch.js",
