--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^4.1.17",
     "graphql-request": "^3.6.1",
     "ipfs-http-client": "^50.0.1",
+    "markdown": "^0.5.0",
     "markdown-to-jsx": "^7.1.3",
     "mobx": "^6.3.5",
     "mobx-react-lite": "^3.2.1",
