--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -31,6 +31,7 @@
     "react-dom": "17.0.2",
     "react-query": "^3.27.0",
     "react-trello": "^2.2.11",
+    "simple-markdown": "^0.7.3",
     "styled-components": "^5.3.3",
     "use-wallet": "^0.12.2",
     "web3-react": "^5.0.5"
